# CV-Assignment

Assingment01/: README.md  panorama_stitcher.py  report.tex
Assingment01/output/: metrics.csv
Assingment01/src/: __init__.py  blending.py  config.py  evaluation.py  features.py  homography.py  utils.py  warping.py
Assinment 2/: README.md  pyproject.toml
Assinment 2/configs/: dataset.yaml  experiment.yaml
Assinment 2/report/: references.bib  report.tex
Assinment 2/results/astronaut/: metrics.json
Assinment 2/results/chelsea/: metrics.json
Assinment 2/results/coffee/: metrics.json
Assinment 2/results/summary/: aggregate.json  metrics.csv
Assinment 2/src/: __init__.py  baseline.py  cli.py  config.py  data_io.py  evaluation.py  graph_construction.py  maxflow_solver.py  modeling.py  optimization.py  prepare_data.py  refinement.py  report_assets.py  visualization.py
Assinment 2/tests/: test_evaluation.py  test_graph_cut.py  test_modeling.py  test_refinement.py  test_smoke.py
